--- a/style.css
+++ b/style.css
@@ -1,54 +1,103 @@
-*{padding:0px;
+
+* {font-family: "poppin", sans-serif;
+    padding: 0px;
     margin: 0px;
 }
-body{
-    background-color:#A6E3E9;
+
+body {
+    /* background-color: rgb(40, 42, 46);
+    /* background-image: url(image.jpg.jpg); */
+    background-size: cover;
+    background-repeat: no-repeat; 
 }
 
-div{background-color: #71C9CE;
-height: 60px;}
+.nav {
+    /* : #71C9CE; */
+    height: 60px;
+    position: sticky;
+    padding-top: 18px;
+    /* background-color: rgb(40, 42, 46); */
+}
 
 nav-bar {
 
-font-family:"poppin", sans-serif;
-font-size: 20px; list-style: none;
-gap: 20px;
+    font-family: "poppin", sans-serif;
+    font-size: 20px;
+    list-style: none;
+
+
 
 }
-/* "consolas"  */
-#h3{
-    justify-content: left;
-    margin: 20px;
-    margin-left: 0px;
-    font-weight: bold;
-}
- ul{ list-style: none;
+
+ul {
+    list-style: none;
     position: sticky;
-display: flex;
-gap: 20px;
-justify-content: center;
- border-radius: 20;
- height: 60px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    border-radius: 20;
+    height: 42px;
 }
-    
+
 nav-bar li a {
-    text-decoration: none; 
-    color:black;
+    text-decoration: none;
+    color: #374151;
 }
-#h2{ border-style: outset;
+
+#h2 {
+    border-style: outset;
     border-color: rgba(30, 203, 180, 0.639);
     border-radius: 10px;
     border-spacing: 30px;
     padding: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     font-weight: 500;
     float: none;
 }
-section{ position: static; background-color: black;
-    bottom: auto; text-align: center; color: beige;
-   border-radius: 20px;border-color: rgb(26, 109, 100);
-   border-style: outset; border-width: 10px;
-   
- }
-#main{
+
+#h3 {padding-bottom: 12px;
+    font-size: xx-large;
+    border-spacing: 30px;
+    justify-content: left;
+    margin-right: 200px;
+    font-weight: 700;
+}
+
+section {
+
+    bottom: auto;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    border-width: 10px;
+
+}
+
+.footer {
+    position: static;
+    bottom: 0px;
+    width: 100vw;
+    background-color:#111827;
+}
+#quick-link{
+    padding: 10px;
+    font-size: 1.2em;
+}
+.logo{height: 40px;
+}
+.logo i{
+    height: 40px;
+    width: 40px;
+    padding-left: 20px;
+}
+#contact{font-size: 2em;
+    height: 40px;
+    padding: 10px;
+}
+#reserved{
+    height: 40px;
+    padding: 20px;
+}
+#main {
     height: 200px;
 }
